--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -393,7 +393,7 @@ a {
 }
 
 #slide:hover ~ span {
-	background: #ffdc52;
+	background:#cda20b;
 }
 
 /*
@@ -557,6 +557,9 @@ CSS for when the menu is actually open
 		transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
 					background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
 					opacity 0.55s ease;
+	}
+	#slide:hover ~ span {
+		background:#ffdc52;
 	}
 	.underline {
 		background-color: #cda20b;
